--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,19 @@
 name: Run Tests
 
 on:
+  workflow_dispatch:
+    inputs:
+      browser:
+        description: "Select browser to run tests (chrome or firefox)"
+        required: false
+        default: "firefox"
+
   push:
   pull_request:
 
 jobs:
   tests:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        browser: [firefox]  # You can add 'chrome' if you wish
 
     steps:
       - name: Checkout code
@@ -28,11 +31,14 @@ jobs:
 
       - name: Run Pytest tests (headless)
         run: |
-          pytest tests/test_login.py --browser=${{ matrix.browser }} --headless
+          pytest test_guru99_login.py --browser=${{ github.event.inputs.browser || 'firefox' }} --headless
 
       - name: Run Robot Framework tests
         run: |
-          pytest tests/test_guru99.robot --robotframework-output=output.xml --robotframework-log=log.html --robotframework-report=report.html
+          pytest tests/test_guru99.robot \
+            --robotframework-output=output.xml \
+            --robotframework-log=log.html \
+            --robotframework-report=report.html
 
       - name: Upload Robot Logs (optional)
         uses: actions/upload-artifact@v4
@@ -48,5 +54,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: failure-screenshots
-          path: |
-            screenshots/
+          path: screenshots/
