--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Pytest tests 
+      - name: Run Pytest tests (headless)
         run: |
           pytest test_guru99_login.py --browser=${{ github.event.inputs.browser || 'firefox' }} --headless
 
+      - name: Run Robot Framework tests
+        run: |
+          pytest Demo-Bao.robot \
+            --robotframework-output=output.xml \
+            --robotframework-log=log.html \
+            --robotframework-report=report.html
 
       - name: Upload Robot Logs (optional)
         uses: actions/upload-artifact@v4
