--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       browser:
-        description: "Select browser to run tests (chrome or firefox)"
+        description: "Browser to run tests on (chrome or firefox)"
         required: false
         default: "firefox"
 
@@ -28,6 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest-robotframework  # Ensure Robot plugin is installed
 
       - name: Run Pytest tests (headless)
         run: |
@@ -40,7 +41,7 @@ jobs:
             --robotframework-log=log.html \
             --robotframework-report=report.html
 
-      - name: Upload Robot Logs (optional)
+      - name: Upload Robot Logs
         uses: actions/upload-artifact@v4
         with:
           name: robot-logs
@@ -49,9 +50,10 @@ jobs:
             log.html
             report.html
 
-      - name: Upload Screenshots on Failure (optional)
+      - name: Upload Screenshots (on failure)
         if: failure()
         uses: actions/upload-artifact@v4
         with:
           name: failure-screenshots
-          path: screenshots/
+          path: |
+            screenshots/
