--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-
+          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest-robotframework  # Ensure Robot plugin is installed
+          pip install robotframework robotframework-seleniumlibrary robotframework-faker
+          pip install pytest-robotframework
 
       - name: Run Pytest tests (headless)
         run: |
